--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <link rel="stylesheet" type="text/css" href="button.css">
 <link rel="stylesheet" type="text/css" href="radio.css">
 <link rel="stylesheet" type="text/css" href="checkbox.css">
-<script src="https://unpkg.com/focus-visible@latest/dist/focus-visible.min.js"></script>
+<link rel="stylesheet" type="text/css" href="textbox.css">
+<!--<script src="https://unpkg.com/focus-visible@latest/dist/focus-visible.min.js"></script>-->
 
 <label class="radio">
   <input type="radio" name="rad1" value="a">
@@ -28,3 +29,9 @@
   <input type="checkbox" name="ckb2" value="b">
   <i></i> Checkbox 2
 </label>
+
+<br>
+
+<input type="text">
+<br><br>
+<input type="text">
