password done; TODO: fix selected appearance

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="radio.css">
 <link rel="stylesheet" type="text/css" href="checkbox.css">
 <link rel="stylesheet" type="text/css" href="textbox.css">
+<link rel="stylesheet" type="text/css" href="password.css">
 <!--<script src="https://unpkg.com/focus-visible@latest/dist/focus-visible.min.js"></script>-->
 
 <label class="radio">
@@ -34,4 +35,4 @@
 
 <input type="text">
 <br><br>
-<input type="text">
+<input type="password">
