slider done; removed text drop on button click in firefox

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<link rel="stylesheet" type="text/css" href="body.css">
-<link rel="stylesheet" type="text/css" href="button.css">
-<link rel="stylesheet" type="text/css" href="radio.css">
-<link rel="stylesheet" type="text/css" href="checkbox.css">
-<link rel="stylesheet" type="text/css" href="textbox.css">
-<link rel="stylesheet" type="text/css" href="password.css">
+<link rel="stylesheet" type="text/css" href="css/body.css">
+<link rel="stylesheet" type="text/css" href="css/button.css">
+<link rel="stylesheet" type="text/css" href="css/radio.css">
+<link rel="stylesheet" type="text/css" href="css/checkbox.css">
+<link rel="stylesheet" type="text/css" href="css/textbox.css">
+<link rel="stylesheet" type="text/css" href="css/password.css">
+<link rel="stylesheet" type="text/css" href="css/slider.css">
 <!--<script src="https://unpkg.com/focus-visible@latest/dist/focus-visible.min.js"></script>-->
 
 <label class="radio">
@@ -36,3 +37,10 @@
 <input type="text">
 <br><br>
 <input type="password">
+
+<br>
+<br>
+<br>
+
+<input type="range">
+
