--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/password.css">
   <link rel="stylesheet" type="text/css" href="css/slider.css">
   <!--<script src="https://unpkg.com/focus-visible@latest/dist/focus-visible.min.js"></script>-->
+  <script src="js/focus-visible.js"></script>
 </header>
 
 <body>
